--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,20 @@ p {
    opacity: 0.75;
 }
 
+.shareDiv {
+   height: 26px;
+   width: 26px;
+   position: relative;
+   float: right;
+   right: 33px;
+   bottom: 54px;
+}
+
+.picNShare {
+   width: 500px;
+   margin: 0 auto;
+}
+
 .inline {
    display: inline-block;
 }
@@ -75,6 +89,10 @@ p {
    height: 25px;
    width: 25px;
    opacity: 0.6;
+}
+
+.opacity:hover {
+   opacity: 0.8;
 }
 
 .bell {
@@ -144,7 +162,10 @@ p {
    padding-left: 9px;
 }
 
-.inputDiv
+.inputDiv:hover {
+   border-color: #b9b9b9;
+   border-top-color: #a0a0a0;
+}
 
 .input {
    width: 100%;
@@ -171,18 +192,25 @@ p {
    align-items: flex-start;
    background-image: -webkit-linear-gradient(top, #f8f8f8, #f1f1f1);
    border: 1px solid #f2f2f2;
-   border-radius: 2px;
+   border-radius: 3px;
    font-family: arial, sans-serif;
    font-size: 13px;
    font-weight: bold;
    margin: 11px 4px;
    padding: 10px 16px;
+   color: #757575;
 }
 
 .button:hover {
    border: 1px solid #c6c6c6;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+   color: black;
 }
+
+.button:focus {
+   outline: none;
+   border: 1px solid #4784FE;
+ }
 
 .buttonDiv {
    margin-top: 18px;
